+ Visual query builder
- bug #3115519 [interface] Prevent long queries from being shown in confirmation popup
- patch #3112792 [navi] Left panel table grouping incorrect,
  thanks to garas - garas
- bug #3123433 [interface] Avoid double escaping of MySQL errors.
- bug #3119874 [interface] Show integers without decimals on status page.

3.3.9.0 (not yet released)
- bug [doc] Fix references to MySQL doc
- patch #3101490 Default function for TIMESTAMP, thanks to jirand - jirand
- bug #3103853 [js] Double quotes were not escaped in generated js
- bug #3077463 [core] Events were not copied when copying/renaming database
- bug #1762306 [core] Copy database with view of a view
- patch #3117535 [replication] Add quotes to database in initial statement,
  thanks to Craig Duncan - duncan3dc

3.3.8.1 (2010-11-29)
- bug #3115519 (private) [security] XSS on db search, see PMASA-2010-8

3.3.8.0 (2010-10-25)
- bug #3059311 [import] BIGINT field type added to table analysis
- [core] Update library PHPExcel to version 1.7.4
- bug #3062455 [core] copy procedures and routines before tables
- bug #3062455 [export] with SQL, export procedures and routines before tables
- bug #3056023 [import] USE query not working
- bug #3038193 [display] Error when editing row with GEOMETRY column
- bug #3062454 [interface] Display routines/events also when no tables are defined
- support ARIA storage engine as well as its previous name MARIA

3.3.7.0 (2010-09-07)
- patch #3050492 [PDF scratchboard] Cannot drag table box to the edge after
  a page size increase, thanks to Martin Schönberger - mad05

3.3.6.0 (2010-08-28)
- bug #3033063 [core] Navi gets wrong db name
- bug #3031705 [core] Fix generating condition for real numbers by comparing
  them to string.
- bug #3034026 [confirmation] TRUNCATE queries get no confirmation request
- bug #3036132 [core] Triggers not fetched if dbname has an hyphen
- patch #3039269 [dbi] Wrong variable checked for nopassword option,
  thanks to Will Palmer - wpalmer